# llm-tg-bot

./: .gitignore  LICENCE  README.md  __main__.py  _markdown.py  _memory.py  _pdf.py  _persistence.py  _retries.py  _state.py  etest_markdown.py  example_config.yaml  pyproject.toml  pyrightconfig.json  ruff.toml  test_markdown.py
